# research-backend-for-IFS4205-testing

./: pyproject.toml
..github/workflows/: ci.yml  sast.yml
accounts/: authentication.py  exceptions.py  hooks.py  models.py  serializers.py  views.py
accounts/migrations/: 0001_initial.py
database_routers/: default.py  researchs.py
research_backend/: asgi.py  settings.py  urls.py  wsgi.py
researchs/: models.py  serializers.py  urls.py  views.py
researchs/migrations/: 0001_initial.py
